--- a/Source/User/src/Panel/pnConfig.form
+++ b/Source/User/src/Panel/pnConfig.form
@@ -82,8 +82,11 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtServerName">
           <Properties>
-            <Property name="text" type="java.lang.String" value="DESKTOP-0T1NQE8"/>
+            <Property name="text" type="java.lang.String" value="DESKTOP-0B3QB2Q"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtServerNameActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="220" y="72" width="380" height="30"/>
