--- a/Source/User/src/Panel/pnChangePin.form
+++ b/Source/User/src/Panel/pnChangePin.form
@@ -126,6 +126,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="HOME"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHomeActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="500" y="370" width="147" height="41"/>
